--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -93,6 +93,7 @@
                 <th>Name</th>
                 <th>Edit</th>
                 <th>Delete</th>
+                <th>Created At</th>
             </tr>
             <tbody id="todos"></tbody>
         </table>
